kubernetes/apps/files/metube/http-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metube-http
spec:
  parentRefs:
    - name: default
      namespace: gateway-api
      sectionName: http-local
  hostnames:
    - metube.${LOCAL_DOMAIN}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metube-https
spec:
  parentRefs:
    - name: default
      namespace: gateway-api
      sectionName: https-wildcard-local
  hostnames:
    - metube.${LOCAL_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: metube
          port: 8081
