kubernetes/apps/files/metube/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metube-http
spec:
  parentRefs:
    - name: default
      sectionName: http-local
      kind: Gateway
      namespace: istio-system
  hostnames:
    - metube.${LOCAL_DOMAIN}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metube-https
spec:
  parentRefs:
    - name: default
      sectionName: https-wildcard-local
      kind: Gateway
      namespace: istio-system
  hostnames:
    - metube.${LOCAL_DOMAIN}
  rules:
    - backendRefs:
        - name: metube-metube
          port: 8081
